update post start

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -26,5 +26,5 @@
         "memory": "4gb",
         "storage": "32gb"
     },
-    "postStartCommand": "/bin/sh scripts/startup.sh"
+    "postStartCommand": "/bin/bash scripts/startup.sh"
 }
