--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -26,6 +26,6 @@
         "memory": "4gb",
         "storage": "32gb"
     },
-    "postCreateCommand": "chmod +x .devcontainer/startup.sh",
-    "postStartCommand": "/bin/bash .devcontainer/startup.sh"
+    "postStartCommand": "chmod +x .devcontainer/startup.sh",
+    "postAttachCommand": "/bin/bash .devcontainer/startup.sh"
 }
