--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,6 +43,6 @@ jobs:
       - name: Terraform Plan
         run: terraform plan
         env:
-          TF_VAR_dbt_account_id: ${{ secrets.TF_VAR_dbt_account_id }}
-          TF_VAR_dbt_token: ${{ secrets.TF_VAR_dbt_token }}
-          TF_VAR_dbt_host_url: ${{ secrets.TF_VAR_dbt_host_url }}
+          TF_VAR_dbt_account_id: ${{ secrets.TF_VAR_DBT_ACCOUNT_ID }}
+          TF_VAR_dbt_token: ${{ secrets.TF_VAR_DBT_TOKEN }}
+          TF_VAR_dbt_host_url: ${{ secrets.TF_VAR_DBT_HOST_URL }}
