--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -26,5 +26,5 @@
         "memory": "4gb",
         "storage": "32gb"
     },
-    "postStartCommand": ["chmod +x .devcontainer/initialize_startup.sh","/bin/bash .devcontainer/initialize_startup.sh"]
+    "postAttachCommand": ["chmod +x .devcontainer/initialize_startup.sh","/bin/bash .devcontainer/initialize_startup.sh"]
 }
