--- a/.devcontainer/snowflake/devcontainer.json
+++ b/.devcontainer/snowflake/devcontainer.json
@@ -14,7 +14,7 @@
             "description": "Create an encryption key to store terraform state (use `openssl rand -base64 32` in terminal to create)."
         }
     },
-    "name": "dbt Cloud Terraform Starter for Databricks",
+    "name": "dbt Cloud Terraform Starter for Snowflake",
     "dockerFile": "Dockerfile",
     "settings": {
         "files.associations": {
@@ -26,5 +26,5 @@
         "memory": "4gb",
         "storage": "32gb"
     },
-    "postStartCommand": "/bin/bash .devcontainer/initialize_startup.sh"
+    "postStartCommand": "/bin/bash .devcontainer/snowflake/initialize_startup.sh"
 }
