--- a/.devcontainer/databricks/devcontainer.json
+++ b/.devcontainer/databricks/devcontainer.json
@@ -26,5 +26,5 @@
         "memory": "4gb",
         "storage": "32gb"
     },
-    "postStartCommand": "/bin/bash .devcontainer/databricks/initialize_startup.sh"
+    "postCreateCommand": "/bin/bash .devcontainer/databricks/initialize_startup.sh"
 }
